# DISP-2021-SampleApplication

./: README.md
app/backend/: Cargo.toml
app/backend/src/: frontend_build  main.rs
app/frontend/: .gitignore  package.json
app/frontend/public/: index.html
app/frontend/src/: App.svelte  global.css
app/frontend/src/components/: Time.svelte
